--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <body>
     <div class="container my-5 mx-auto">
-        <h1 class="text-muted text-center my-4">
+        <h1 class="text-center my-4">
             Weather App
         </h1>
 
-        <form class="change-location my-4 text-center text-muted">
+        <form class="change-location my-4 text-center">
             <label for="city">Enter a location for weather information</label>
             <input type="text" name="city" class="form-control p-4">
         </form>
@@ -26,7 +26,7 @@
             <div class="icon bg-light mx-auto text-center">
                 <img src="" alt="">
             </div>
-            <div class="text-muted text-uppercase text-center details">
+            <div class="text-uppercase text-center details text-muted">
                 <h5 class="my-3">City name</h5>
                 <div class="my-3">Weather condition</div>
                 <div class="display-4 my-4">
